Add hxhal Controller

--- a/etc/hx.cfg
+++ b/etc/hx.cfg
@@ -9,16 +9,21 @@ updateInterval = 60
 datadir = $ICS_MHS_DATA_ROOT/hx
 
 # Which interface/address we should _listen_ on. 'localhost' does not open security holes!
-interface = localhost
+interface = jarvis.charis
 # Which port do we listen for connections from tron on? This needs to match the one in tron's config/hub.py 
 port = 9922
 
-controllers = winjarvis
-startingControllers = winjarvis
+controllers = winjarvis, hxhal
+startingControllers = hxhal
+defaultBackend = hxhal
 
 [winjarvis]
 host = winjarvis.charis
 port = 5000
+
+[hxhal]
+link = usb
+samId = 16
 
 [logging]
 logdir = $ICS_MHS_LOGS_ROOT/actors/hx
