--- a/etc/hx.cfg
+++ b/etc/hx.cfg
@@ -1,6 +1,6 @@
 [tron]
 # What host does the tron hub run on?
-tronHost = localhost 
+tronHost = 10.1.1.1
 # What tron port do we connect to. This is defined by tron.
 tronCmdrPort = 6093
 
