--- a/etc/hx.cfg
+++ b/etc/hx.cfg
@@ -9,7 +9,7 @@ updateInterval = 60
 datadir = $ICS_MHS_DATA_ROOT/hx
 
 # Which interface/address we should _listen_ on. 'localhost' does not open security holes!
-interface = jarvis.charis
+interface = pfs-hx.pfs
 # Which port do we listen for connections from tron on? This needs to match the one in tron's config/hub.py 
 port = 9922
 
@@ -23,7 +23,7 @@ port = 5000
 
 [hxhal]
 link = usb
-samId = 16
+samId = 59
 
 [logging]
 logdir = $ICS_MHS_LOGS_ROOT/actors/hx
