--- a/etc/hx.cfg
+++ b/etc/hx.cfg
@@ -1,6 +1,6 @@
 [tron]
 # What host does the tron hub run on?
-tronHost = 10.1.1.1
+tronHost = tron
 # What tron port do we connect to. This is defined by tron.
 tronCmdrPort = 6093
 
@@ -9,9 +9,9 @@ updateInterval = 60
 datadir = $ICS_MHS_DATA_ROOT/hx
 
 # Which interface/address we should _listen_ on. 'localhost' does not open security holes!
-interface = pfs-hx.pfs
+interface = jarvis
 # Which port do we listen for connections from tron on? This needs to match the one in tron's config/hub.py 
-port = 9922
+port = 0
 
 controllers = winjarvis, hxhal
 startingControllers = hxhal
@@ -23,7 +23,7 @@ port = 5000
 
 [hxhal]
 link = usb
-samId = 59
+samId = 0
 
 [logging]
 logdir = $ICS_MHS_LOGS_ROOT/actors/hx
