Configuration changes, for JHU and IRP.

--- a/etc/hx_b9.cfg
+++ b/etc/hx_b9.cfg
@@ -16,12 +16,18 @@ port = 0
 controllers = hxhal
 startingControllers = hxhal
 defaultBackend = hxhal
-imageCamName = n8
+imageCamName = n9
 
 [hxhal]
 link = usb
 samId = 0
 # samId = 59
+# firmware = HxRG_Main_postIDE.mcd
+#firmware = H4RG_IRP.mcd
+#hxconfig = warmNoIrp
+
+firmware = H4RG_IRP.mcd
+hxconfig = warmNoIrp
 
 [logging]
 logdir = $ICS_MHS_LOGS_ROOT/actors/hx_b9
