--- a/etc/hx_n8.cfg
+++ b/etc/hx_n8.cfg
@@ -4,12 +4,13 @@ tronHost = tron
 # What tron port do we connect to. This is defined by tron.
 tronCmdrPort = 6093
 
-[hx_n1]
+[hx_n8]
 updateInterval = 60
 datadir = $ICS_MHS_DATA_ROOT/hx
 
 # Which interface/address we should _listen_ on. 'localhost' does not open security holes!
-interface = bee-n1
+#interface = pfs-hx
+interface = bee-n8
 # Which port do we listen for connections from tron on? This needs to match the one in tron's config/hub.py 
 port = 0
 
@@ -26,7 +27,7 @@ firmware = H4RG_IRP.mcd
 hxconfig = cold
 
 [logging]
-logdir = $ICS_MHS_LOGS_ROOT/actors/hx_n1
+logdir = $ICS_MHS_LOGS_ROOT/actors/hx_n8
 baseLevel = 20
 cmdLevel = 20
 dispatchLevel = 30
