Update default config names.
coldIrp1 for the real cryostats, warmIrp0 for the b9 bench ROIC.

--- a/etc/hx_b9.cfg
+++ b/etc/hx_b9.cfg
@@ -22,12 +22,9 @@ imageCamName = n9
 link = usb
 samId = 0
 # samId = 59
-# firmware = HxRG_Main_postIDE.mcd
-#firmware = H4RG_IRP.mcd
-#hxconfig = warmNoIrp
 
 firmware = H4RG_IRP.mcd
-hxconfig = warmNoIrp
+hxconfig = warmIrp0
 
 [logging]
 logdir = $ICS_MHS_LOGS_ROOT/actors/hx_b9
