--- a/etc/hx_n8.cfg
+++ b/etc/hx_n8.cfg
@@ -24,7 +24,7 @@ samId = 0
 # samId = 59
 
 firmware = H4RG_IRP.mcd
-hxconfig = cold
+hxconfig = coldIrp1
 
 [logging]
 logdir = $ICS_MHS_LOGS_ROOT/actors/hx_n8
