--- a/etc/hx_n9.cfg
+++ b/etc/hx_n9.cfg
@@ -9,7 +9,7 @@ updateInterval = 60
 datadir = $ICS_MHS_DATA_ROOT/hx
 
 # Which interface/address we should _listen_ on. 'localhost' does not open security holes!
-interface = bee-n9
+interface = bee-b9
 # Which port do we listen for connections from tron on? This needs to match the one in tron's config/hub.py 
 port = 0
 
@@ -21,6 +21,9 @@ defaultBackend = hxhal
 link = usb
 samId = 0
 # samId = 59
+
+firmware = H4RG_IRP.mcd
+hxconfig = warmIrp0
 
 [logging]
 logdir = $ICS_MHS_LOGS_ROOT/actors/hx_n9
